--- a/style.css
+++ b/style.css
@@ -22,9 +22,6 @@ nav{
     color: rgb(255, 196, 0);
 }
 
-.home-text {
-    padding-top: 200px !important;
-}
 .small-1{
     font-size: 14.5px !important;
 }
@@ -44,6 +41,12 @@ nav{
     background: url("./imgs/bg_home.jpg") no-repeat center bottom/cover;
     opacity: 0.6;
     z-index: -1;
+}
+
+
+.info{
+  background-color: black;
+padding: 100px;
 }
 .card-img-top{
     width: 60%;
@@ -239,7 +242,7 @@ nav{
   
 
 footer{
-    padding: 50px 50px;
+    padding: 10px 50px;
     background-color: rgba(192, 150, 11, 0.801);
   }
   
@@ -286,6 +289,10 @@ footer{
   .contacting-info{
     padding: 50px 0px ;
   }
+  
+  .contacting-info-containers-questions{
+    flex-basis: 45%;
+  }
 }
 
 
@@ -295,7 +302,7 @@ footer{
     /* header */
 
     .bg_home {
-        height: 560px;
+        height: 660px;
         margin-top: -100px;
         z-index: 3;
     }
@@ -304,7 +311,7 @@ footer{
         font-size: 1.9rem;
     }
     .text-at-home{
-        font-size: 0.7rem;
+        font-size: 0.6rem;
     }
 
 
@@ -312,7 +319,7 @@ footer{
     .contacting-info{
         flex-direction: column;
         
-        padding: 50px 100px;
+        padding: 30px 100px;
       }
       
     .contacting-info-containers-logo{
@@ -320,6 +327,7 @@ footer{
     }
     .contacting-info-containers-questions{
       flex-basis: 60vw;
+      padding-bottom: 0px;
     }
     .contacting-info-containers-recent-posts{
       flex-basis: 60vw;
@@ -333,10 +341,21 @@ footer{
     
 }
 
+
+
+@media (max-width:550px){
+    
+  .contacting-info{
+      padding: 30px 20px ;
+    }
+  }
+  
+
+
 @media (max-width:430px){
     
 .contacting-info{
-    padding: 50px 70px;
+    padding: 30px 30px 0px 30px;
   }
 }
 
