--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .bg_home {
-  background: url("./imgs/bg_home.JPG") no-repeat center bottom/cover;
+  background: url("./imgs/bg_home.jpg") no-repeat center bottom/cover;
     
     max-width: 100vw;
     height: 760px;
