--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .bg_home {
-  background: url("./imgs/bg_home.jpg") no-repeat center bottom/cover;
+  background: url("./imgs/bg_home.JPG") no-repeat center bottom/cover;
     
     max-width: 100vw;
     height: 760px;
@@ -227,6 +227,7 @@ padding: 100px;
   }
   .greenlink i{
     padding: 5px 5px 10px 2px;
+    font-family:Georgia, 'Times New Roman', Times, serif;
   }
   
 
@@ -292,7 +293,7 @@ footer{
 
     .bg_home {
         height: 660px;
-        margin-top: -100px;
+        /* margin-top: -100px; */
         z-index: 3;
     }
 
