--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .bg_home {
-  background: url("./imgs/bg_home.jpg") no-repeat center bottom/cover;
+  background: url("./imgs/bg_home.JPG") no-repeat center center/cover;
     
     max-width: 100vw;
-    height: 760px;
+    height: 600px;
     /* margin-top: -100px; */
     z-index: 3;
 }
@@ -227,7 +227,7 @@ padding: 100px;
   }
   .greenlink i{
     padding: 5px 5px 10px 2px;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family:Tahoma;
   }
   
 
@@ -291,11 +291,6 @@ footer{
 
     /* header */
 
-    .bg_home {
-        height: 660px;
-        /* margin-top: -100px; */
-        z-index: 3;
-    }
 
     .text-big{
         font-size: 1.9rem;
